tools/tests/errors/surf_type_14.experr
type 'String' does not support this operator
